<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="P_BACnet_Error" Id="{cbcb446d-2870-4188-9eca-74baf4a350e8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_BACnet_Error
VAR
	i					: INT := 0;		//for loop counter
	arrLampFailure		: ARRAY [1..10] OF BOOL;
	dwLampFailure		: DWORD;
	rLampFailure		: REAL;
	
	ton_Execute			: TON;
	
	fbDALIV2QueryLampFailure_1		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_3		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_4		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_5		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_6		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_7		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_8		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_9		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_10		: FB_DALIV2QueryLampFailure;
	
	fbDALIV2QueryLampFailure_1_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_2_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_3_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_4_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_5_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_6_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_7_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_8_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_9_2		: FB_DALIV2QueryLampFailure;
	fbDALIV2QueryLampFailure_10_2		: FB_DALIV2QueryLampFailure;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//init ton timer
ton_Execute(IN := NOT ton_Execute.Q, PT := T#100MS);

//query first half of the lamp
fbDALIV2QueryLampFailure_1(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[1].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);

//query second half of the lamp
fbDALIV2QueryLampFailure_1_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[1].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[2].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);

//query second half of the lamp
fbDALIV2QueryLampFailure_2_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[2].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_3(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[3].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);

//query second half of the lamp
fbDALIV2QueryLampFailure_3_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[3].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB1);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_4(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[4].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);

//query second half of the lamp
fbDALIV2QueryLampFailure_4_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[4].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_5(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[5].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);

//query second half of the lamp
fbDALIV2QueryLampFailure_5_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[5].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_6(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[6].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);

//query second half of the lamp
fbDALIV2QueryLampFailure_6_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[6].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_7(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[7].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);

//query second half of the lamp
fbDALIV2QueryLampFailure_7_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[7].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB2);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_8(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[8].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);

//query second half of the lamp
fbDALIV2QueryLampFailure_8_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[8].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_9(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[9].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);

//query second half of the lamp
fbDALIV2QueryLampFailure_9_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[9].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);
		
		//query first half of the lamp
fbDALIV2QueryLampFailure_10(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[10].nAddrShort1, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);

//query second half of the lamp
fbDALIV2QueryLampFailure_10_2(
		bStart:= ton_Execute.Q, 
		nAddr:= GVL_IO.arrStreetLamps[10].nAddrShort2, 
		eAddrType:= eDALIV2AddrTypeShort, 
		eCommandPriority:= eDALIV2CommandPriorityLow,  
		stCommandBuffer:= GVL_IO.stCommandBuffer_RB3);



	
//convert arrLampFailure into pseudo-array in the form of a DWORD variable
dwLampFailure.0 := fbDALIV2QueryLampFailure_1.bLampFailure  OR fbDALIV2QueryLampFailure_1_2.bLampFailure;
dwLampFailure.1 := fbDALIV2QueryLampFailure_2.bLampFailure  OR fbDALIV2QueryLampFailure_2_2.bLampFailure;
dwLampFailure.2 := fbDALIV2QueryLampFailure_3.bLampFailure  OR fbDALIV2QueryLampFailure_3_2.bLampFailure;
dwLampFailure.3 := fbDALIV2QueryLampFailure_4.bLampFailure  OR fbDALIV2QueryLampFailure_4_2.bLampFailure;
dwLampFailure.4 := fbDALIV2QueryLampFailure_5.bLampFailure  OR fbDALIV2QueryLampFailure_5_2.bLampFailure;
dwLampFailure.5 := fbDALIV2QueryLampFailure_6.bLampFailure  OR fbDALIV2QueryLampFailure_6_2.bLampFailure;
dwLampFailure.6 := fbDALIV2QueryLampFailure_7.bLampFailure  OR fbDALIV2QueryLampFailure_7_2.bLampFailure;
dwLampFailure.7 := fbDALIV2QueryLampFailure_8.bLampFailure  OR fbDALIV2QueryLampFailure_8_2.bLampFailure;
dwLampFailure.8 := fbDALIV2QueryLampFailure_9.bLampFailure  OR fbDALIV2QueryLampFailure_9_2.bLampFailure;
dwLampFailure.9 := fbDALIV2QueryLampFailure_10.bLampFailure OR fbDALIV2QueryLampFailure_10_2.bLampFailure;

//type conversion from REAL to DWORD
rLampFailure := DWORD_TO_REAL(dwLampFailure);

//write rLampFailure to BACnet obcject present value
//thereby keep BACnet object instance alive
fbBACnet_AV_SL_Error(Device := Device, bEnablePV := TRUE, bNullPV := FALSE, fPV := rLampFailure);]]></ST>
    </Implementation>
    <LineIds Name="P_BACnet_Error">
      <LineId Id="35" Count="0" />
      <LineId Id="185" Count="1" />
      <LineId Id="184" Count="0" />
      <LineId Id="36" Count="4" />
      <LineId Id="44" Count="8" />
      <LineId Id="187" Count="0" />
      <LineId Id="189" Count="13" />
      <LineId Id="188" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="205" Count="13" />
      <LineId Id="204" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="221" Count="13" />
      <LineId Id="220" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="237" Count="13" />
      <LineId Id="236" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="253" Count="13" />
      <LineId Id="252" Count="0" />
      <LineId Id="267" Count="0" />
      <LineId Id="269" Count="13" />
      <LineId Id="268" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="285" Count="13" />
      <LineId Id="284" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="301" Count="13" />
      <LineId Id="300" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="317" Count="13" />
      <LineId Id="316" Count="0" />
      <LineId Id="91" Count="1" />
      <LineId Id="22" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="8" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="76" Count="0" />
      <LineId Id="79" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>